# hiro

./: .gitignore  flake.nix  setup.cfg
hiro/: __init__.py  select.py
tests/: test_assumptions.py  test_build_schedule_properties.py
