[metadata]
name = hiro
version = 0.0.1
author = Roberto Abdelkader Martínez Pérez
author_email = robertomartinezp@gmail.com
license = GPL3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    croniter
    cytoolz
tests_requires =
    pytest
    hypothesis

[tool:pytest]
addopts = -v
