[metadata]
name = hiro
version = 0.0.1
author = Roberto Abdelkader Martínez Pérez
author_email = robertomartinezp@gmail.com
license = GPL3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    croniter
    cytoolz
tests_requires =
    pytest


[options.entry_points]
console_scripts=
    hiro-slot = hiro.slot:main
    hiro-select = hiro.select:main


[tool:pytest]
addopts = -v
